# zto-fastapi-service

./: .dockerignore  .gitignore  Celery.py  Dockerfile  Jenkinsfile  auth  config.py  local.yaml  main.py  nfs.yaml  prod.yaml  pyproject.toml  ssh-key  start-api.sh  start_celery  test_main.http
authentication/: login.py  schema.py
tasks/: migrate.py  signals.py
utils/: customExceptions.py  download.py  utils.py
worker/: Dockerfile
